enum-ptr-test/tests/fail/repr.stderr
error: missing `#[repr(C, usize)]`
 --> tests/fail/repr.rs:5:10
  |
5 | #[derive(EnumPtr)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `EnumPtr` (in Nightly builds, run with -Z macro-backtrace for more info)
